# eni

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  build.yaml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  eosim-sanity.yml  nightly.yml  qemu-test.yml  release.yml  scorecard.yml  simulation-test.yml  simulation.yml  weekly.yml
.reuse/: dep5
bindings/cpp/: CMakeLists.txt
bindings/cpp/examples/: basic_pipeline.cpp
bindings/cpp/include/eni/: eni.hpp  provider.hpp  types.hpp
cli/: CMakeLists.txt  main.c
cmake/: coverage.cmake  sanitizers.cmake  static-analysis.cmake  toolchain-arm-cortex-m4.cmake  toolchain-riscv32.cmake
common/: CMakeLists.txt
common/dsp/include/eni/: adaptive_filter.h  artifact_removal.h  feature_fusion.h
common/dsp/src/: adaptive_filter.c  artifact_removal.c  feature_fusion.c
common/feedback/include/eni/: feedback_loop.h
common/feedback/src/: feedback_loop.c
common/hal/include/eni/: hal.h
common/hal/src/: hal.c  hal_stub.c
common/include/eni/: common.h  config.h  decoder.h  dsp.h  eipc_bridge.h  event.h  feedback.h  log.h  nn.h  policy.h  provider_contract.h  stim_safety.h  stimulator.h  tool_call.h  types.h
common/include/nia/: common.h  config.h  event.h  log.h  policy.h  provider_contract.h  tool_call.h  types.h
common/math/include/eni/: fixed_point.h  math_ops.h
common/nn/include/eni/: cnn_decoder.h  lstm.h  online_learning.h  onnx_loader.h  quantized.h
common/nn/src/: cnn_decoder.c  lstm.c  online_learning.c  onnx_loader.c  quantized.c
common/src/: config.c  decoder.c  dsp.c  eipc_bridge.c  event.c  feedback.c  log.c  nn.c  policy.c  provider.c  stim_safety.c  tool_call.c  types.c
common/tinyml/: CMakeLists.txt
common/tinyml/include/eni/: tflite_micro.h
common/tinyml/src/: tflite_micro_bridge.c
docker/: Dockerfile.build  Dockerfile.test  docker-compose.yml
docs/compliance/: ISO_15288_lifecycle.md  ISO_20243_OTTPS.md  ISO_25000_SQuaRE.md  OSS_compliance.md  audit_log.md  risk_register.md  traceability_matrix.md
docs/qms/: quality_management_system.md
framework/: CMakeLists.txt
framework/include/eni_fw/: connectors.h  decoder.h  feedback.h  observability.h  orchestrator.h  provider_manager.h  router.h  service.h  signal_processor.h  stream_bus.h
framework/include/nia_fw/: connectors.h  observability.h  orchestrator.h  provider_manager.h  router.h  service.h  stream_bus.h
framework/src/: connectors.c  decoder.c  feedback.c  observability.c  orchestrator.c  provider_manager.c  router.c  service.c  signal_processor.c  stream_bus.c
gui/: package.json
gui/backend/: server.py
gui/src/: App.tsx
integrations/: CMakeLists.txt
integrations/eipc_streaming/: CMakeLists.txt
integrations/eipc_streaming/include/eni/: eipc_stream.h
integrations/eipc_streaming/src/: eipc_stream.c
integrations/oni/: CMakeLists.txt
integrations/oni/include/eni/: oni_compliance.h
integrations/oni/src/: oni_compliance.c
integrations/ros2/: CMakeLists.txt  package.xml
integrations/ros2/launch/: eni_bci.launch.py
integrations/ros2/msg/: NeuralIntent.msg  NeuralSignal.msg
integrations/ros2/src/: eni_ros2_node.c
min/: CMakeLists.txt
min/include/eni_min/: decoder.h  feedback.h  filter.h  input.h  mapper.h  normalizer.h  service.h  signal_processor.h  tool_bridge.h
min/include/nia_min/: filter.h  input.h  mapper.h  normalizer.h  service.h  tool_bridge.h
min/src/: decoder.c  feedback.c  filter.c  input.c  mapper.c  normalizer.c  service.c  signal_processor.c  tool_bridge.c
models/: README.md
platform/: CMakeLists.txt
platform/eos/: platform_eos.c
platform/forgeos/: platform_forgeos.c
platform/include/eni_platform/: platform.h
platform/include/nia_platform/: platform.h
platform/linux/: platform_linux.c
platform/windows/: platform_windows.c
providers/: CMakeLists.txt
providers/eeg/: eeg.c  eeg.h
providers/generic/: generic.c  generic.h
providers/neuralink/: neuralink.c  neuralink.h
providers/simulator/: simulator.c  simulator.h
providers/stimulator_sim/: stimulator_sim.c  stimulator_sim.h
providers/template/: template_provider.c  template_provider.h
providers/wireless/: CMakeLists.txt  wireless_bci.c  wireless_bci.h
sdk/nodejs/: package.json
sdk/nodejs/examples/: basic.ts
sdk/nodejs/src/: index.ts  types.ts
sdk/python/: setup.py
sdk/python/eni/: __init__.py  core.py  stream.py  visualize.py
sdk/python/examples/: live_eeg.py
sdk/python/tests/: test_bindings.py
sim/: CMakeLists.txt
sim/include/eni/: sim.h
sim/src/: sim_bci_generator.c  sim_eeg_generator.c  sim_environment.c
tests/: CMakeLists.txt  test_bci_pipeline.c  test_common.c  test_decoder.c  test_decoder_extended.c  test_dsp.c  test_dsp_extended.c  test_event.c  test_event_feedback.c  test_filter.c  test_framework.c  test_min.c  test_neuralink.c  test_nn.c  test_nn_extended.c  test_normalizer.c  test_policy.c  test_provider_eeg.c  test_provider_lifecycle.c  test_providers.c  test_stim_safety.c  test_stim_safety_extended.c  test_stimulator.c
tests/integration/: test_full_pipeline.c
tests/mocks/: mock_neural_input.c  mock_neural_input.h  mock_provider.c  mock_provider.h
tools/: quantize_model.py
